--- a/package.json
+++ b/package.json
@@ -1,24 +1,33 @@
 {
   "name": "markdown-reader",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "type": "module",
-  "description": "读取多维表格中的Markdown内容",
-  "main": "src/index.ts",
+  "description": "飞书多维表格 Markdown 阅读器插件",
   "scripts": {
-    "dev": "base-cli dev",
-    "build": "base-cli build",
-    "deploy": "base-cli deploy"
+    "start": "vite",
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
+  "keywords": ["feishu", "lark", "markdown", "reader"],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@lark-base-open/js-sdk": "^0.3.5",
-    "marked": "^9.1.2",
+    "@lark-base-open/js-sdk": "0.3.0-alpha",
+    "antd": "^5.8.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.7",
+    "remark-gfm": "^3.0.1",
+    "rehype-raw": "^6.1.1",
+    "rehype-highlight": "^6.0.0",
+    "highlight.js": "^11.8.0"
   },
   "devDependencies": {
-    "@lark-base-open/cli": "^0.5.0",
-    "@types/react": "^18.2.25",
-    "@types/react-dom": "^18.2.11",
-    "typescript": "^5.2.2"
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
+    "@vitejs/plugin-react": "^2.0.0",
+    "typescript": "^4.7.4",
+    "vite": "^3.0.4"
   }
 }
